# f1-ical

./: .gitignore  Cargo.toml  README.md  dockerfile  icalendar.ics
src/: main.rs
static/: f1-races.ics
templates/: races.html.hbs
