[package]
name = "f1-ical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[source.crates-io]
registry = "git://github.com/rust-lang/crates.io-index.git"

[dependencies]
icalendar = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
chrono = "0.4"
rocket = "0.5.0-rc.2"