[package]
name = "f1-ical"
version = "1.62.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [source.crates-io]
# registry = "git://github.com/rust-lang/crates.io-index.git"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[dependencies]
icalendar = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
chrono = "0.4"
rocket = "0.5.0-rc.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]